1. Modify imgThumbnail size, xButton position, and arrow button position to use viewport unit for better display on mobile 2. Add arrow button z-index to make sure always on top of image 3. Slightly adjust imgInText padding

--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@
 
 .imgInText {
     height: 50px;
-    padding: 0px 10px;
+    padding: 0px 5px;
     vertical-align: middle;
 }
 
@@ -112,8 +112,10 @@
 }
 
 .imgThumbnail {
-    width: 200px;
-    height: 200px;
+    width: 20vw;
+    height: 20vw;
+    max-width: 200px;
+    max-height: 200px;
     padding: 5px 5px 0px 5px;
     object-fit: cover;
     cursor: pointer;
@@ -144,8 +146,8 @@
 	background-color: transparent;
 	border : 0;
 	float: right;
-    top: 10px;
-    right: 50px;
+    top: 2vh;
+    right: 5vw;
     font-size: 30px;
     font-family: tahoma;
     cursor: pointer;
@@ -160,9 +162,10 @@
     border-width: 0 3px 3px 0;
     padding: 10px;
     position: fixed;
-    top: 45vh;
+    top: calc(50vh - 5px);
     opacity: 0.5;
     cursor: pointer;
+    z-index: 99;
 }
 .arrow:hover {
     opacity: 1;
@@ -172,12 +175,12 @@
     transform: rotate(-45deg);
     -webkit-transform: rotate(-45deg);
 	float: right;
-    right: 50px;
+    right: 5vw;
 }
 
 .left {
     transform: rotate(135deg);
     -webkit-transform: rotate(135deg);
 	float: left;
-    left: 50px;
+    left: 5vw;
 }
